--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -61,7 +61,10 @@
           >
             <span>
               {%- if product.selected_or_first_available_variant.available == false or quantity_rule_soldout -%}
-                {{ 'products.product.sold_out' | t }}
+                {% if product.selected_or_first_available_variant.metafields.my_fields.deliverydate.value != "" %}
+                  {{ 'products.product.pre-order' | t }}
+                {% else %}
+                  {{ 'products.product.sold_out' | t }}
               {%- else -%}
                 {{ 'products.product.add_to_cart' | t }}
               {%- endif -%}
