--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -294,8 +294,8 @@
             {% comment %} *** LIEFERBAR *** {% endcomment %} 
             {%- when 'delivery_tag' -%}
               <div id="delivery_tag-{{ section.id }}" role="status" class="no-js-hidden" {{ block.shopify_attributes }}>
-                {%- if product.selected_or_first_available_variant.inventory_quantity < 1 or product.selected_or_first_available_variant.metafields.my_fields.deliverydate.value != "" -%}
-                  {%- if product.selected_or_first_available_variant.metafields.my_fields.deliverydate.value != "" -%}
+                {%- if product.selected_or_first_available_variant.inventory_quantity < 1 or product.selected_or_first_available_variant.metafields.my_fields.deliverydate != "" -%}
+                  {%- if product.selected_or_first_available_variant.metafields.my_fields.deliverydate != "" -%}
                       <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ product.selected_or_first_available_variant.metafields.my_fields.deliverydate.value }}</b></span>
                   {%- elsif product.selected_or_first_available_variant.inventory_policy == "continue" -%}
                       <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-wodate' | t }}</span>
