--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -294,9 +294,9 @@
             {% comment %} *** LIEFERBAR *** {% endcomment %} 
             {%- when 'delivery_tag' -%}
               <div id="delivery_tag-{{ section.id }}" role="status" class="no-js-hidden" {{ block.shopify_attributes }}>
-                {%- if product.selected_or_first_available_variant.inventory_quantity < 1 or product.selected_or_first_available_variant.metafields.my_fields.deliverydate != "" -%}
-                  {%- if product.selected_or_first_available_variant.metafields.my_fields.deliverydate != "" -%}
-                      <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ product.selected_or_first_available_variant.metafields.my_fields.deliverydate.value }}</b></span>
+                {%- if product.selected_or_first_available_variant.inventory_quantity < 1 or product.tags contains 'pre-order' -%}
+                  {%- if delivery_date != null and delivery_date != "" and delivery_date > today_date -%}
+                      <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-preorder' | t }}  <b>{{ delivery_date | date: "%d.%m.%y" }}</b></span>
                   {%- elsif product.selected_or_first_available_variant.inventory_policy == "continue" -%}
                       <span class="DeliveryHint-preorder ">● {{ 'products.product.delivery-hint-wodate' | t }}</span>
                   {%- else -%}
