--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -44,7 +44,7 @@
         <div class="product-form__buttons">
           {%- liquid
             assign check_against_inventory = true
-            if product.selected_or_first_available_variant.inventory_management != 'shopify' or  product.selected_or_first_available_variant.inventory_policy == 'continue' or product.selected_or_first_available_variant.metafields.my_fields.deliverydate.value != ""
+            if product.selected_or_first_available_variant.inventory_management != 'shopify' or  product.selected_or_first_available_variant.inventory_policy == 'continue'
               assign check_against_inventory = false
             endif
             if product.selected_or_first_available_variant.quantity_rule.min > product.selected_or_first_available_variant.inventory_quantity and check_against_inventory
@@ -61,10 +61,7 @@
           >
             <span>
               {%- if product.selected_or_first_available_variant.available == false or quantity_rule_soldout -%}
-                {% if product.selected_or_first_available_variant.metafields.my_fields.deliverydate.value != "" %}
-                  {{ 'products.product.pre-order' | t }}
-                {% else %}
-                  {{ 'products.product.sold_out' | t }}
+                {{ 'products.product.sold_out' | t }}
               {%- else -%}
                 {{ 'products.product.add_to_cart' | t }}
               {%- endif -%}
